# ECommerce

./: .coveragerc  README.md  pyproject.toml  pytest.ini
.github/workflows/: CI.yaml  main.yml
data/: data.csv:Zone.Identifier
ecommerce/: app.py  conn_duckdb.py  main.py  schema.py
ecommerce/pipeline/: extract.py  load.py  schemas.py  transform.py
notebooks/: teste_leitura.ipynb
tests/: test_extract.py  test_read_file.py
