[project]
name = "ecommerce"
version = "0.1.0"
description = ""
authors = [
    {name = "Bergsmf",email = "bergsmf@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "duckdb (>=1.3.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "ecommerce", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
